Create Start + input panel

--- a/src/ui/Panel/template.html
+++ b/src/ui/Panel/template.html
@@ -1,3 +1,4 @@
+<!-- html -->
 <aside id="panel">
     <div class="panel-header">
         <h2 class="panel-title">MODULE INFO</h2>
@@ -20,6 +21,12 @@
             </div>
 
             <input type="range" id="score-slider" min="0" max="100" step="25" />
+
+            <!-- Champ de justification avec classes -->
+            <div class="info-row justification-row">
+                <label for="justification" class="justification-label">JUSTIFICATION (courte)</label>
+                <textarea id="justification" class="justification-input" rows="3" placeholder="Expliquez brièvement ce que vous avez fait..."></textarea>
+            </div>
 
             <br /><br />
             <button class="btn-bios" id="btn-save">
